--- a/presentation_main/templates/pages/index.html
+++ b/presentation_main/templates/pages/index.html
@@ -1,13 +1,46 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>Upload test</h1>
-    {% block content %}
-    {% endblock %}
-</form>
-</body>
+	<head>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+		<title>발표의 참견</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		{% load static %}<link rel="stylesheet" href="{% static 'main.css' %}" />
+		<noscript><link rel="stylesheet" href="{% static 'noscript.css' %}" /></noscript>
+	</head>
+	<body class="is-preload">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
+
+				<!-- Header -->
+					<header id="header">
+						<h1>발표의 참견</h1>
+						<p>AI 프레젠테이션 교육 시스템, 당신의 발표를 도와드리겠습니다.</p>
+						<nav>
+							<ul>
+								<li><a href="upload" class="button">시작하기</a></li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Untitled. Design: GOOFANAKA.</span>
+					</footer>
+
+			</div>
+		</div>
+		<script>
+			window.onload = function() { document.body.classList.remove('is-preload'); }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
 </html>
