--- a/presentation_main/templates/pages/index.html
+++ b/presentation_main/templates/pages/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Aerial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
+{% load static %}
 	<head>
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+		<link rel="shortcut icon" href="{% static 'images/gfnk.ico' %}">
 		<title>발표의 참견</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		{% load static %}<link rel="stylesheet" href="{% static 'main.css' %}" />
-		<noscript><link rel="stylesheet" href="{% static 'noscript.css' %}" /></noscript>
+		<link rel="stylesheet" href="{% static 'main.css' %}" />
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
@@ -25,14 +19,14 @@
 						<p>AI 프레젠테이션 교육 시스템, 당신의 발표를 도와드리겠습니다.</p>
 						<nav>
 							<ul>
-								<li><a href="upload" class="button">시작하기</a></li>
+								<li><a href="upload" class="button alt">시작하기</a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Untitled. Design: GOOFANAKA.</span>
+						<span class="copyright">&copy; GOOFANAKA .</span>
 					</footer>
 
 			</div>
