--- a/presentation_main/templates/pages/list.html
+++ b/presentation_main/templates/pages/list.html
@@ -1,5 +1,5 @@
-{% extends 'pages/index.html' %}
+
 
 {% block content %}
-    <h2>image upload success</h2>
+    <h2>File upload success</h2>
 {% endblock %}
