--- a/presentation_main/templates/pages/upload.html
+++ b/presentation_main/templates/pages/upload.html
@@ -2,6 +2,8 @@
 <head>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css">
 	{% load static %}<link rel="stylesheet" href="{% static 'sub.css' %}" />
 	<noscript><link rel="stylesheet" href="{% static 'noscript.css' %}" /></noscript>
 	<link rel="shortcut icon" href="{% static 'images/gfnk.ico' %}">
@@ -26,15 +28,15 @@
 							<article id="home" class="panel">
 								<header>
 									{% block content %}
-										<h2>발표 동영상 파일을 업로드해 주세요.</h2><hr>
-											<form method="post" enctype="multipart/form-data">
+										<h3>발표 동영상 파일을 업로드해 주세요.</h3><hr>
+											<form action="http://127.0.0.1:8000/upload_file/" method="POST" enctype="multipart/form-data">
 												{% csrf_token %}
-												{{ form }}
+												<input type="file" name="file" required="required">
 												<div id = "radio-div"><br>
 													<h3>당신의 성별을 선택해 주세요.</h3><hr>
 														<div class="btn-group" data-toggle="buttons" id="radiogroup">
-															<input type="radio" name="check_option" value="man">남
-															<input type="radio" name="check_option" value="woman" id = "radio-woman">여
+															<input type="radio" name="check_option" value="0" required="required">남
+															<input type="radio" name="check_option" value="1" id = "radio-woman">여
 														</div><br>
 													<div>
 														<button type="submit">결과보기</button>
@@ -51,48 +53,50 @@
 								<header>
 									<h2>Report</h2>
 								</header>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+								<p class="work_p">
+									발표 동영상의 종합 분석 결과입니다.<hr>
 								</p>
 								<section>
+									<h2>Pose</h2>
+									<p class="work_p">
+									발표 자세(pose)에 대한 분석 결과입니다.</p>
 									<div class="row">
+										<div class="chart-div">
+											<canvas id="pieChartCanvas" width="300px" height="300px"></canvas>
+<!--											<div id='legend-div' class="legend-div"></div>  # 범례-->
+        								</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="{% static 'pic01.jpg' %}" alt=""></a>
+											<a href="#" class="image fit"><img src="{% static 'images/work/pic01.jpg' %}" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="{% static 'images/work/pic01.jpg' %}" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="{% static 'images/work/pic01.jpg' %}" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="{% static 'images/work/pic01.jpg' %}" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="{% static 'images/work/pic01.jpg' %}" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="{% static 'images/work/pic01.jpg' %}" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="{% static 'images/work/pic01.jpg' %}" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="{% static 'images/work/pic01.jpg' %}" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="{% static 'images/work/pic01.jpg' %}" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="{% static 'images/work/pic01.jpg' %}" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="{% static 'images/work/pic01.jpg' %}" alt=""></a>
 										</div>
 									</div>
 								</section>
@@ -101,7 +105,7 @@
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
-									<h2>Contact Goofanaka</h2>
+									<h2>To. Goofanaka</h2><hr>
 								</header>
 								<form action="#" method="post">
 									<div>
@@ -143,5 +147,7 @@
 			<script src="{% static 'js/breakpoints.min.js' %}"></script>
 			<script src="{% static 'js/util.js' %}"></script>
 			<script src="{% static 'js/main.js' %}"></script>
+			<script src="{% static 'js/script.js' %}"></script>
+
 </body>
 </html>
